replaced deprecated calls